# scrapy-selenium-addon

./: .travis.yml  README.md  setup.cfg
scrapy_selenium/: middlewares.py
scrapy_selenium_addon/: __init__.py  middlewares.py
tests/: test_cases.py  test_middlewares.py
