[metadata]
name = scrapy-selenium-addon
version = 0.0.8
url = https://github.com/sakarimov/scrapy-selenium-addon
licence = DO WHAT THE FUCK YOU WANT TO PUBLIC LICENSE
description = Scrapy with selenium
long_description_content_type = text/plain
long_description = scrapy middleware addon to use scrapy with selenium

[options]
include_package_data = true

[pep8]
max-line-length = 100
